package org.lsp;

public abstract class AbstractGun {

    public abstract void shoot();

}
