@startuml
'https://plantuml.com/class-diagram

class Client
class Solider {
    AbstractGun gun

    void setGun(AbstractGun gun)
    void killEnemy()
}

abstract class AbstractGun {
    void shoot()
}

class Handgun
class Rifle
class MachineGun

note "手枪" as N1
note "步枪" as N2
note "机枪" as N3

Handgun .. N1
Rifle .. N2
MachineGun .. N3

Client --> Solider
Client --> AbstractGun

Solider ..> AbstractGun

AbstractGun <|-- Handgun
AbstractGun <|-- Rifle
AbstractGun <|-- MachineGun

@enduml